<resources>
    <string name="app_name">TactileBoard</string>

    <string name="intent_extra">dict</string>
    <string name="shared_prefs">DICT</string>

    <string name="pattern_exists">Haptogram already exists</string>
    <string name="word_exists">Word already exists</string>
    <string name="no_word">Please add a translation</string>
    <string name="no_pattern">Please add a haptogram</string>
    <string name="not_known">Haptogram not known</string>
    <string name="word_inserted">Haptogram successfully inserted</string>
    <string name="new_word">enter new word here</string>
    <string name="complete">Complete</string>
    <string name="clear">Clear</string>

    <!-- Preferences -->
    <string name="pref_actuator_first_frame_long_key">first_frame_long</string>
    <string name="pref_actuator_first_frame_long_title">Enable Reference Frame</string>
    <string name="pref_actuator_first_frame_long_desc">If activated, the first vibration is longer.</string>

    <string name="pref_actuator_frame_time_key">frame_time</string>
    <string name="pref_actuator_frame_time_title">Actuator Frame Duration</string>
    <string name="pref_actuator_frame_time_desc">The duration of one single frame in ms. This determines how long a single actuator vibrates.</string>

    <string name="pref_actuator_frame_overlap_key">frame_overlap</string>
    <string name="pref_actuator_frame_overlap_title">Actuator Overlap Time</string>
    <string name="pref_actuator_frame_overlap_desc">The duration of the overlap of two frames in ms.</string>

    <string name="pref_grid_size_key">grid_size</string>
    <string name="pref_grid_size_title">Grid Size</string>
    <string name="pref_grid_size_desc">The size of the grid.</string>

    <string name="pref_send_ontology_key">use_ontology</string>
    <string name="pref_send_ontology_title">Message Destination</string>
    <string name="pref_send_ontology_desc">When enabled the message will be sent to the ontology.</string>

</resources>
